<html><head></head><body>

<!-- BEGIN-LATEST-JP -->
<li>Polaris Engine 2.0.3 2024/6/28
  <ul>
    <li>Unity版が動作しなくなっていたのを修正</li>
  </ul>
</li>
<!-- END-LATEST-JP -->

<li>Polaris Engine 2.0.2 2024/6/24
  <ul>
    <li>編集環境で折りたたみシステムメニューのチラつきを低減</li>
    <li>Macでの日本語翻訳を修正</li>
  </ul>
</li>
<li>Polaris Engine 2.0.1 2024/6/24
  <ul>
    <li>セリフでないメッセージでリップシンクが動作するバグを修正</li>
  </ul>
</li>
<li>Polaris Engine 2.0.0 2024/6/21
  <ul>
    <li><code>Polaris Engine 2.0.0 (Honeydew Melon)</code> をリリース</li>
    <li><a href="https://polaris-engine.com/award2024.html">コンテスト再告知はこちら</a></li>
  </ul>
</li>
<li>Polaris Engine 2.0.0-beta1 2024/6/20
  <ul>
    <li>特に問題がなければこの内容で2024年6月21日に2.0.0をリリース</li>
  </ul>
</li>
<li>Polaris Engine 1.99.7 2024/6/20
  <ul>
    <li>リリース方法の注記を追加 build/README.md</li>
  </ul>
</li>
<li>Polaris Engine 1.99.6 2024/6/18
  <ul>
    <li>エンジン名のtypoを修正</li>
  </ul>
</li>
<li>Polaris Engine 1.99.5 2024/6/17
  <ul>
    <li>Mac版の日本語訳を修正</li>
  </ul>
</li>
<li>Polaris Engine 1.99.4 2024/6/17
  <ul>
    <li>アイコンの修正</li>
  </ul>
</li>
<li>Polaris Engine 1.99.3 2024/6/17
  <ul>
    <li>軽微な修正</li>
  </ul>
</li>
<li>Polaris Engine 1.99.2 2024/6/16
  <ul>
    <li>リブランド時に未変更だったファイル名の変更</li>
  </ul>
</li>
<li>Polaris Engine 1.99.1 2024/6/16
  <ul>
    <li>GitHubの整理</li>
  </ul>
</li>
<li>Polaris Engine 1.99.0 2024/6/16
  <ul>
    <li>GitHubのみの開発体制に移行</li>
  </ul>
</li>
<li>Polaris Engine 1.4.6 2024/6/15
  <ul>
    <li>GitHubでの自動ビルドに変更</li>
  </ul>
</li>
<li>Polaris Engine 1.4.5 2024/6/15
  <ul>
    <li>GitHubにアップロードするように変更</li>
  </ul>
</li>
<li>Polaris Engine 1.4.4 2024/6/14
  <ul>
    <li>リブランド(修正)</li>
  </ul>
</li>
<li>Polaris Engine 1.4.3 2024/6/14
  <ul>
    <li>リブランド(修正)</li>
  </ul>
</li>
<li>Polaris Engine 1.4.2 2024/6/14
  <ul>
    <li>リブランド(修正)</li>
  </ul>
</li>
<li>Polaris Engine 1.4.1 2024/6/14
  <ul>
    <li>リブランド(修正)</li>
  </ul>
</li>
<li>Polaris Engine 1.4.0 2024/6/14
  <ul>
    <li>リブランド</li>
  </ul>
</li>
<li>x-engine 1.1.8 (1.3.37) 2024/6/12
  <ul>