@@ -1,0 +1,42 @@
+Polaris Engine
+==============
+`Polaris Engine` is a development tool to create Visual Novels.
+
+## What is Polaris Engine?
+* Polaris Engine self-claims a software to create "Novel Apps"
+  * "Novel Apps" are interactive arts using texts, illustrations and sounds
+* Apps made with Polaris Engine are currently distributed on the smartphone stores of Apple and Google
+* Polaris Engine can export Unity projects and thus they run on gaming consoles
+* Polaris Engine is a professional and free software for every company and person
+* Polaris Engine is licensed under the MIT license and it cannot be monopolized and/or commercialized in the future
+* Polaris Engine is fullfilled by knowledge on smartphone platforms and any company can start using it now
+* Publishing a Novel App made with Polaris Engine is a shortest path for individuals to become professional creator
+
+## What is the characteristics of Polaris Engine?
+* Polaris Engine has a light-weight and easy-to-use development environment
+* Polaris Engine runs on Windows, Mac and Linux
+* Polaris Engine can export smartphone apps by a single click, it's like a magic!
+* You can monetize apps on stores, and the engine fee is zero
+* You can multilingualize your apps easily, so you can distribute them on Steam internationally
+* Polaris Engine can run on gaming consoles
+* You can use single-step-execution for debug
+* Light and stable feelings for players
+
+## What are the target platformsof Polaris Engine?
+Polaris Engine runs on every contemporary devices.
+You can export the following apps by a single click.
+* iPhone app
+* iPad app
+* Android app
+* Windows app
+* Mac app
+* Web browser app
+* Gaming console software (using Unity)
+
+## What are the target users of Polaris Engine?
+Polaris Engine's target users are professionals who will work on the gaming subscription market.
+
+(translating...)
+
+## Contact
+* `info@polaris-engine.org`
