@@ -11,23 +11,22 @@ OBJS = $(SRCS_UNITY:../../src/%.c=%.o)
 #
 # Make a source tree
 #
-all: libpolarisengine-win64.dll libpolarisengine-macos.dylib
+all: libpolarisengine-win64.dll libpolarisengine-arm64.dll libpolarisengine-macos.dylib
 	@rm -rf unity-src
 	@mkdir unity-src
-	@cp -v -R ProjectSettings unity-src/
-	@cp -v -R Packages unity-src/
-	@cp -v -R Library unity-src/
 	@mkdir unity-src/Assets
+	@mkdir unity-src/Assets/StreamingAssets
+	@mkdir unity-src/Assets/Resources
 	@cp -v Assets/MainScene.unity unity-src/Assets/
 	@cp -v Assets/PolarisEngineScript.cs unity-src/Assets/
 	@cp -v Assets/PolarisEngineAudio.cs unity-src/Assets/
-	@mkdir unity-src/Assets/StreamingAssets
-	@mkdir unity-src/Assets/Resources
 	@cp -v Assets/Resources/NormalShader.shader unity-src/Assets/Resources/
+	@cp -v Assets/Resources/AddShader.shader unity-src/Assets/Resources/
 	@cp -v Assets/Resources/DimShader.shader unity-src/Assets/Resources/
 	@cp -v Assets/Resources/RuleShader.shader unity-src/Assets/Resources/
 	@cp -v Assets/Resources/MeltShader.shader unity-src/Assets/Resources/
 	@cp libpolarisengine-win64.dll unity-src/
+	@cp libpolarisengine-arm64.dll unity-src/
 	@cp libpolarisengine-macos.dylib unity-src/
 	@cp README.txt unity-src/
 	@mkdir unity-src/dll-src
@@ -43,7 +42,6 @@ all: libpolarisengine-win64.dll libpolarisengine-macos.dylib
 # Windows 64bit DLL for Test Run
 #
 libpolarisengine-win64.dll: $(SRCS_UNITY)
-	rm -rf *.o libroot-x86_64 libpolarisengine-win64.dll
 	x86_64-w64-mingw32-gcc \
 		-shared \
 		-fPIC \
@@ -66,6 +64,33 @@ libpolarisengine-win64.dll: $(SRCS_UNITY)
 		../engine-windows-64/libroot/lib/libvorbisfile.a \
 		../engine-windows-64/libroot/lib/libvorbis.a \
 		../engine-windows-64/libroot/lib/libogg.a
+
+#
+# Windows arm64 DLL for Test Run
+#
+libpolarisengine-arm64.dll: $(SRCS_UNITY)
+	../engine-windows-arm64/llvm/bin/aarch64-w64-mingw32-gcc \
+		-shared \
+		-fPIC \
+		-o libpolarisengine-arm64.dll \
+		-O2 \
+		-DPOLARIS_ENGINE_TARGET_UNITY \
+		-DNO_CDECL \
+		-I../engine-windows-arm64/libroot/include \
+		-I../engine-windows-arm64/libroot/include/png \
+		-I../engine-windows-arm64/libroot/include/freetype2 \
+		$(SRCS_UNITY) \
+		../engine-windows-arm64/libroot/lib/libfreetype.a \
+		../engine-windows-arm64/libroot/lib/libpng16.a \
+		../engine-windows-arm64/libroot/lib/libjpeg.a \
+		../engine-windows-arm64/libroot/lib/libwebp.a \
+		../engine-windows-arm64/libroot/lib/libz.a \
+		../engine-windows-arm64/libroot/lib/libbz2.a \
+		../engine-windows-arm64/libroot/lib/libbrotlidec.a \
+		../engine-windows-arm64/libroot/lib/libbrotlicommon.a \
+		../engine-windows-arm64/libroot/lib/libvorbisfile.a \
+		../engine-windows-arm64/libroot/lib/libvorbis.a \
+		../engine-windows-arm64/libroot/lib/libogg.a
 
 #
 # macOS DLL for Test Run
