@@ -4,7 +4,7 @@
 ## 注意事項
 * `Polaris Engine` の開発者はゲーム機のSDKを持っていないです
 * なので想像だけで開発されています
-* Windowsでの動作以外は一切確認されていません
+* PCとMac以外での動作は一切確認されていません
 
 ## ゲーム機版のビルド手順
 * まずSDKのコンパイラを使えるターミナルを開いてください
@@ -17,5 +17,10 @@
     * `dll-src/switch.mk` の先頭2行、`CC=`と`AR=`について、実際のコマンド名に書き換えてください
 * `make`を実行してください
 * そのあとでUnityで開いてください
+
+## Unityで開いた後の作業
+* `Player Settings` で `Allow unsafe code` にチェックを入れてください
+* `MainScene` をダブルクリックしてください
 * `Script` を `PolarisEngineScript.cs` と紐づけしてください
-* `BGM`, `SE`, `Voice`, `SysSE` を `PolarisEngineAudio.cs`と紐づけしてください
+* `BGM`, `SE`, `Voice`, `SYSSE` を `PolarisEngineAudio.cs`と紐づけしてください
+* 実行してください
