@@ -74,8 +74,8 @@ cp libz.a ../../libroot/lib/
 cd ..
 
 echo 'Building libpng...'
-tar xzf ../../libsrc/libpng-1.6.35.tar.gz
-cd libpng-1.6.35
+tar xzf ../../libsrc/libpng-1.6.43.tar.gz
+cd libpng-1.6.43
 ./configure --prefix=$PREFIX --enable-static --disable-shared --host=aarch64-w64-mingw32 CPPFLAGS=-I$PREFIX/include CFLAGS='-O3 -ffunction-sections -fdata-sections' LDFLAGS=-L$PREFIX/lib CC=aarch64-w64-mingw32-gcc
 make
 make install
