@@ -1,13 +1,19 @@
 <html><head></head><body>
 
 <!-- BEGIN-LATEST-JP -->
+<li>Polaris Engine 2.0.4 2024/6/29
+  <ul>
+    <li>Unity版の修正</li>
+    <li>Unity版にWindows Arm64のDLLを添付</li>
+  </ul>
+</li>
+<!-- END-LATEST-JP -->
+
 <li>Polaris Engine 2.0.3 2024/6/28
   <ul>
     <li>Unity版が動作しなくなっていたのを修正</li>
   </ul>
 </li>
-<!-- END-LATEST-JP -->
-
 <li>Polaris Engine 2.0.2 2024/6/24
   <ul>
     <li>編集環境で折りたたみシステムメニューのチラつきを低減</li>
